force-app/main/default/objects/Opportunity/fields/ContentsType__c.field-meta.xml
<CustomField>
    <fullName>ContentsType__c</fullName>
    <label>コンテントタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>