force-app/main/default/objects/Opportunity/fields/DeliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDestination__c</fullName>
    <label>納品先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>