force-app/main/default/objects/Opportunity/fields/DeliveryDestinationAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDestinationAddress__c</fullName>
    <label>納品先住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>