force-app/main/default/objects/Opportunity/fields/DeliveryDestinationPhone__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDestinationPhone__c</fullName>
    <label>納品先電話番号</label>
    <type>Phone</type>
</CustomField>