force-app/main/default/objects/Opportunity/fields/DeliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNumber__c</fullName>
    <label>納品番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>