force-app/main/default/objects/Opportunity/fields/DesiredDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DesiredDeliveryDate__c</fullName>
    <label>納品希望納期</label>
    <length>255</length>
    <type>Text</type>
</CustomField>