force-app/main/default/objects/Opportunity/fields/DocumenType__c.field-meta.xml
<CustomField>
    <fullName>DocumenType__c</fullName>
    <label>文書種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>