force-app/main/default/objects/Opportunity/fields/FAXCreationTimeStr__c.field-meta.xml
<CustomField>
    <fullName>FAXCreationTimeStr__c</fullName>
    <label>FAX作成時刻</label>
    <length>255</length>
    <type>Text</type>
</CustomField>