force-app/main/default/objects/Opportunity/fields/Item_1__c.field-meta.xml
<CustomField>
    <fullName>Item_1__c</fullName>
    <label>品目０１</label>
    <length>255</length>
    <type>Text</type>
</CustomField>