force-app/main/default/objects/Opportunity/fields/Item_2__c.field-meta.xml
<CustomField>
    <fullName>Item_2__c</fullName>
    <label>品目０２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>