force-app/main/default/objects/Opportunity/fields/Item_3__c.field-meta.xml
<CustomField>
    <fullName>Item_3__c</fullName>
    <label>品目０３</label>
    <length>255</length>
    <type>Text</type>
</CustomField>