force-app/main/default/objects/Opportunity/fields/ItemCode_1__c.field-meta.xml
<CustomField>
    <fullName>ItemCode_1__c</fullName>
    <label>品目コード０１</label>
    <length>20</length>
    <type>Text</type>
</CustomField>