force-app/main/default/objects/Opportunity/fields/ItemCode_2__c.field-meta.xml
<CustomField>
    <fullName>ItemCode_2__c</fullName>
    <label>品目コード０２</label>
    <length>20</length>
    <type>Text</type>
</CustomField>