force-app/main/default/objects/Opportunity/fields/ItemCode_3__c.field-meta.xml
<CustomField>
    <fullName>ItemCode_3__c</fullName>
    <label>品目コード０３</label>
    <length>20</length>
    <type>Text</type>
</CustomField>