force-app/main/default/objects/Opportunity/fields/ModelType1_1__c.field-meta.xml
<CustomField>
    <fullName>ModelType1_1__c</fullName>
    <label>品目０１型式０１</label>
    <length>127</length>
    <type>Text</type>
</CustomField>