force-app/main/default/objects/Opportunity/fields/ModelType1_2__c.field-meta.xml
<CustomField>
    <fullName>ModelType1_2__c</fullName>
    <label>品目０２型式０１</label>
    <length>127</length>
    <type>Text</type>
</CustomField>