force-app/main/default/objects/Opportunity/fields/ModelType1_3__c.field-meta.xml
<CustomField>
    <fullName>ModelType1_3__c</fullName>
    <label>品目０３型式０１</label>
    <length>127</length>
    <type>Text</type>
</CustomField>