force-app/main/default/objects/Opportunity/fields/OrderHeader__c.field-meta.xml
<CustomField>
    <fullName>OrderHeader__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>注文</label>
    <referenceTo>OrderHeader__c</referenceTo>
    <relationshipLabel>OCR履歴</relationshipLabel>
    <relationshipName>OpportunityList</relationshipName>
    <type>Lookup</type>
</CustomField>