force-app/main/default/objects/Opportunity/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>依頼番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>