force-app/main/default/objects/Opportunity/fields/OrderPerson__c.field-meta.xml
<CustomField>
    <fullName>OrderPerson__c</fullName>
    <label>発注担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>