force-app/main/default/objects/Opportunity/fields/ProcessingPerson__c.field-meta.xml
<CustomField>
    <fullName>ProcessingPerson__c</fullName>
    <label>処理担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>