force-app/main/default/objects/Opportunity/fields/SFDC_Formula_ActNameOppNameStage__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Formula_ActNameOppNameStage__c</fullName>
    <formula>Account.Name &amp;&quot;:&quot;&amp; Name&amp;&quot;【&quot;&amp; TEXT( StageName )&amp;&quot;】&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先名＋商談名＋フェーズ（SFDC数式）</label>
    <type>Text</type>
</CustomField>