force-app/main/default/objects/Opportunity/fields/SFDC_keikaNissuu__c.field-meta.xml
<CustomField>
    <fullName>SFDC_keikaNissuu__c</fullName>
    <description>本日から完了予定日をマイナスした日数。完了予定日からどれくらい経っているかを把握。</description>
    <formula>TODAY() - CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>経過日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>