force-app/main/default/objects/Opportunity/fields/SFDC_Kyogo__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Kyogo__c</fullName>
    <label>競合先</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>競合先A社</fullName>
            </value>
            <value>
                <fullName>競合先B社</fullName>
            </value>
            <value>
                <fullName>競合先C社</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>