force-app/main/default/objects/Opportunity/fields/SFDC_ShouhaiGenin__c.field-meta.xml
<CustomField>
    <fullName>SFDC_ShouhaiGenin__c</fullName>
    <inlineHelpText>フェーズに連動。
成立、ロスト時に必須入力。</inlineHelpText>
    <label>勝敗原因</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>価格</fullName>
            </value>
            <value>
                <fullName>営業力</fullName>
            </value>
            <value>
                <fullName>提案ソリューション</fullName>
            </value>
            <value>
                <fullName>商品力</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>