force-app/main/default/objects/Opportunity/fields/SupplierEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>SupplierEmailAddress__c</fullName>
    <label>仕入先メールアドレス</label>
    <length>80</length>
    <type>Text</type>
</CustomField>